fixed overflow issue in ie and some firefox versions

--- a/app_server/static/css/concept-list.css
+++ b/app_server/static/css/concept-list.css
@@ -7,7 +7,10 @@
 
 #concept-list-wrapper {
     top: 7em;
-    padding-bottom: 7em;
+ }
+
+#concept-list {
+   padding-bottom: 7em;
 }
 
 #concept-title-header {
