--- a/app_server/static/css/explore-learn.css
+++ b/app_server/static/css/explore-learn.css
@@ -1,6 +1,10 @@
 /* --------------------------------------------------------*/
 /* ---------->>> Specific HTML Element Styles<<<-----------*/
 /* --------------------------------------------------------*/
+html {
+    overflow: hidden;
+}
+
 body {
     margin: 0;
     padding: 0;
